k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cheeserun-frontend
  namespace: front-cheeserun
spec:
  selector:
    matchLabels:
      app: cheeserun-frontend
  replicas: 1
  template:
    metadata:
      labels:
         app: cheeserun-frontend
    spec:
      imagePullSecrets:
         - name: github-secret
      containers:
         - name: cheeserun-frontend
           image: localhost:5000/cheeserun-front
           ports:
              - containerPort: 8080
           
---
apiVersion: v1
kind: Service
metadata:
  name: cheeserun-frontend-service
  namespace: front-cheeserun
spec:
  selector:
    app: cheeserun-frontend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30001
  type: NodePort
